2001-05-18  Rodrigo Moya <rodrigo@ximian.com>

	* src/soup-wsdl-runtime/wsdl-soap-parse.c (wsdl_soap_headers):
	use the correct XML node to get the headers

2001-05-18  Alex Graveley  <alex@ximian.com>

	* README: "Subscribe" not "Subject" in
	soup-list-request@ximian.com message body. :)

2001-05-18  Alex Graveley  <alex@ximian.com>

	* docs/reference/soup-docs.sgml: Prune soup-core internal files.

	* configure.in: Add pretty section headers, move gtk-doc section

2001-05-17  JP Rosevear  <jpr@ximian.com>

	* src/soup-wsdl/wsdl-soap-skels.c
	(wsdl_emit_soap_skels_binding_operation): do not free the callback
	data, or the second time the method gets called, *KABOOM*
	
2001-05-17  JP Rosevear  <jpr@ximian.com>

	* src/soup-wsdl-runtime/wsdl-soap-parse.c (wsdl_soap_operation):
	prevent leak and check for fault straight away (instead of
	operation name)

	* src/soup-core/soup-env.c (soup_env_free): only free the fault if
	there is one
	(soup_env_clear_fault): ditto

	* src/soup-wsdl-runtime/wsdl-soap-marshal.c (wsdl_soap_marshal):
	use the serializer functions to write out the fault and only write
	the message return if there is no fault
	
2001-05-17  JP Rosevear  <jpr@ximian.com>

	* src/soup-core/soup-headers.c (soup_headers_parse): find the end
	of the value and g_strndup only that as the value, rather than the
	remainder of the string

	* src/soup-core/soup-message.c (soup_message_issue_callback): free
	the message only if the callback exists, otherwise send_message is
	borked.  New a little more design to fix properly

2001-05-17  Dick Porter  <dick@ximian.com>

	* Fixed all gtk-doc moans in soup-core documentation

	* docs/reference: Extract gtk-doc documentation from the code

	* tests/test-wsdl-runtime.c: 
	* tests/stockquote2-server.c: 
	* tests/stockquote2-client.c: Updated for new API

	* tests/stress-test.c: 
	* tests/simple-test.c: Include installed soup headers

	* configure.in: Check for gtk-doc

	* tests/Makefile.am: Made example code just plain